tests/neg/i7753.scala
class A { if 0 // error
} // error
